force-app/main/default/objects/CampaignMemberLeadAssigment__c/CampaignMemberLeadAssigment__c.object-meta.xml
<CustomObject>
    <label>Assegnazione Campaign Member (Lead)</label>
    <nameField>
        <label>Assegnazione Campaign Member su base Lea</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assegnazioni Campaign Member (Lead)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>