force-app/main/default/objects/CampaignMemberLeadAssigment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag Sì/NO</description>
    <label>Attivo</label>
    <type>Checkbox</type>
</CustomField>