force-app/main/default/objects/CampaignMemberLeadAssigment__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione con l’oggetto Account</description>
    <label>Agenzia</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Assegnazioni_Campaign_Member_su_base_Lea</relationshipName>
    <type>Lookup</type>
</CustomField>