force-app/main/default/objects/CampaignMemberLeadAssigment__c/fields/InterestProduct__c.field-meta.xml
<CustomField>
    <fullName>InterestProduct__c</fullName>
    <label>Prodotto di interesse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hera Bebè Dual</fullName>
            </value>
            <value>
                <fullName>Hera Bebè Gas</fullName>
            </value>
            <value>
                <fullName>Hera Bebè Luce</fullName>
            </value>
            <value>
                <fullName>Hera Caldaia</fullName>
            </value>
            <value>
                <fullName>Hera Caldaia Business</fullName>
            </value>
            <value>
                <fullName>Hera Caldaia Sicura</fullName>
            </value>
            <value>
                <fullName>Hera Caldaia Sicura Business</fullName>
            </value>
            <value>
                <fullName>Hera Clima</fullName>
            </value>
            <value>
                <fullName>Hera Clima Business</fullName>
            </value>
            <value>
                <fullName>Hera Contawatt</fullName>
            </value>
            <value>
                <fullName>Hera Contawatt Lavoro</fullName>
            </value>
            <value>
                <fullName>Hera EtàPiù Dual</fullName>
            </value>
            <value>
                <fullName>Hera EtàPiù Gas	Hera</fullName>
            </value>
            <value>
                <fullName>Hera EtàPiù Luce</fullName>
            </value>
            <value>
                <fullName>Hera Fotovoltaico</fullName>
            </value>
            <value>
                <fullName>Hera Fotovoltaico Business</fullName>
            </value>
            <value>
                <fullName>Hera Impronta Zero Dual</fullName>
            </value>
            <value>
                <fullName>Hera Impronta Zero Gas</fullName>
            </value>
            <value>
                <fullName>Hera Impronta Zero Luce</fullName>
            </value>
            <value>
                <fullName>Hera Impronta Zero Lavoro Dual</fullName>
            </value>
            <value>
                <fullName>Hera Impronta Zero Lavoro Gas</fullName>
            </value>
            <value>
                <fullName>Hera Impronta Zero Lavoro Luce</fullName>
            </value>
            <value>
                <fullName>Hera Led</fullName>
            </value>
            <value>
                <fullName>Hera Led Business</fullName>
            </value>
            <value>
                <fullName>Hera No Problem</fullName>
            </value>
            <value>
                <fullName>Hera No Problem Lavoro</fullName>
            </value>
            <value>
                <fullName>Hera Placet Fissa Gas</fullName>
            </value>
            <value>
                <fullName>Hera Placet Fissa Luce</fullName>
            </value>
            <value>
                <fullName>Hera Placet Fissa Lavoro Gas</fullName>
            </value>
            <value>
                <fullName>Hera Placet Fissa Lavoro Luce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>